--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -164,6 +164,9 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Fence Installation & Gate Fitting in Askern DN6</h1>
 
 <title>Garden Fence Quote Calculator | Instant Online Estimate</title>
+<p>
+Quote for typical featheredge panels wtith a total height of 6 foot, with concrete post and gravel boards.
+</p>
 <meta name="description" content="Get an instant garden fence quote. Enter fence length, number of gates, and receive a cost breakdown.">
 <style>
 body { font-family: Arial, sans-serif; background: #f8f8f8; color: #222; margin:0; padding:0; line-height:1.6; }
