--- a/index.html
+++ b/index.html
@@ -223,6 +223,20 @@ From one-off tidy-ups to regular maintenance and landscaping, we offer lawn care
 <p>
 Proper guttering protects your property from water damage. We replace gutters, repair leaks, maintain downpipes and restore fascias and soffits using durable, weather-resistant products.
 </p>
+  <!-- Guttering Lightbox -->
+<a href="#guttering-lightbox">
+<img src="/images/gutter-repairs.webp"
+alt="Gutter cleaning, clearing, repairs and replacement Doncaster."
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="guttering-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/gutter-repairs.webp" alt="Gutter cleaning, clearing, repairs and replacement Doncaster example enlarged">
+</a>
+</div>
+
 <a href="/services/guttering.html" class="service-btn">View Gutter Services</a>
 
 <!-- Pressure Washing -->
