--- a/index.html
+++ b/index.html
@@ -244,6 +244,19 @@ loading="lazy">
 <p>
 Our pressure washing refreshes driveways, patios, decking, paths and brickwork by removing algae, moss and staining — improving safety and kerb appeal.
 </p>
+  <a href="#pressure-washing">
+<img src="/images/Pressure-Washing.webp"
+alt="Exterior decorating before and after example"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="decorating-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/house-before-after.webp" alt="Exterior decorating before and after example enlarged">
+</a>
+</div>
+
 <a href="/services/pressure-washing.html" class="service-btn">View Pressure Washing</a>
 
 <!-- uPVC Restoration -->
