--- a/index.html
+++ b/index.html
@@ -245,11 +245,17 @@ loading="lazy">
 Our pressure washing refreshes driveways, patios, decking, paths and brickwork by removing algae, moss and staining — improving safety and kerb appeal.
 </p>
   <a href="#pressure-washing">
-<img src="/images/Pressure-Washing.webp"
-alt="Exterior decorating before and after example"
+<img src="/images/pressure-washing.webp"
+alt="Exterior pressure washing service Askern Doncaster"
 style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
 loading="lazy">
 </a>
+
+  <div id="pressure-washing" class="lightbox">
+<a href="#">
+<img src="/images/pressure-washing.webp" alt="Exterior pressure washing service Askern Doncaster example enlarged">
+</a>
+</div>
 
 <div id="decorating-lightbox" class="lightbox">
 <a href="#">
