--- a/index.html
+++ b/index.html
@@ -270,6 +270,18 @@ loading="lazy">
 <p>
 We restore uPVC windows, doors and conservatories using professional products and techniques to remove discolouration and grime without harming seals or frames.
 </p>
+  <a href="#upvc">
+<img src="/images/upvc.webp"
+alt="uPVC facia, gutter, framework, window frames, and conservatory valets. "
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="fence-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/upvc.webp" alt="uPVC facia, gutter, framework, window frames, and conservatory valets. Example enlarged">
+</a>
+</div>
 <a href="/services/upvc-restoration.html" class="service-btn">View uPVC Restoration</a>
 
 </main>
