--- a/index.html
+++ b/index.html
@@ -211,11 +211,23 @@ loading="lazy">
 
 <a href="/services/fence-installation.html" class="service-btn">View Fence Installation</a>
 
-<!-- Garden Maintenance -->
-<h2>Garden Maintenance</h2>
-<p>
 From one-off tidy-ups to regular maintenance and landscaping, we offer lawn care, hedge trimming, weeding, planting, turfing, patios and raised beds. We create practical, low-maintenance gardens that look great year-round.
 </p>
+  <!-- Garden Maintenance -->
+<h2>Garden Maintenance</h2>
+<p>
+  <a href="#gardening">
+<img src="/images/gardening.webp"
+alt="Regular and one off gardening services "
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="fence-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/gardening.webp" alt="Regular and one off gardening services Askern Doncaster">
+</a>
+</div>
 <a href="/services/garden.html" class="service-btn">View Garden Services</a>
 
 <!-- Guttering -->
