--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title>
-
+<title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title> <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/">
 <meta name="description" content="Home Repairs 4U provides professional exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration in Askern DN6 and nearby areas. Call 07735 873694.">
 
