--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Exterior Decorating in Askern DN6 | House, Fence & Iron Rail Painting</title>
+<link rel="icon" href="/favicon.png" type="image/png">
 
 <link rel="canonical" href="https://homerepairs4u.com/services/exterior-decorating.html">
 <meta name="description" content="Professional exterior decorating services in Askern DN6 and nearby areas. Specialising in house painting, fence painting, and iron rail painting. Insured, reliable, and high-quality finishes. Call 07735 873694.">
