--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" user-scalable=no/>
 <title>Fence Installation & Gate Fitting in Askern DN6 | Repairs, Sheds & Timber Storage</title>
+<link rel="icon" href="/favicon.png" type="image/png">
 
 <link rel="canonical" href="https://homerepairs4u.com/services/fence-installation.html">
 <meta name="description" content="Professional fence installation and gate fitting in Askern DN6. Full fence builds, repairs, wooden shed construction, bin stores and log storage. Call 07735 873694.">
