--- a/services/garden.html
+++ b/services/garden.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Garden Services in Askern DN6 | Landscaping, Maintenance & Small Jobs</title>
+<link rel="icon" href="/favicon.png" type="image/png">
 
 <link rel="canonical" href="https://homerepairs4u.com/services/garden.html">
 <meta name="description" content="Professional garden services in Askern DN6. From small garden jobs to landscaping, hedge cutting, lawn care, planting, patio installation and raised beds. Call 07735 873694.">
