--- a/services/guttering.html
+++ b/services/guttering.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Gutter Replacement, Cleaning & Clearing | Askern DN6 | Home Repairs 4U</title>
+<link rel="icon" href="/favicon.png" type="image/png">
 
 <link rel="canonical" href="https://homerepairs4u.com/services/guttering.html">
 <meta name="description" content="Home Repairs 4U provides gutter replacement, gutter cleaning and gutter clearing across Askern DN6 and all locations within 10 miles. Fast, affordable, fully insured. Call 07735 873694.">
