--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" user-scalable=no/>
 <title>Professional Pressure Washing in Askern DN6 | Driveways, Patios & Exterior Cleaning</title>
+<link rel="icon" href="/favicon.png" type="image/png">
 
 <link rel="canonical" href="https://homerepairs4u.com/services/pressure-washing.html">
 <meta name="description" content="Professional pressure washing and exterior cleaning in Askern DN6 and all nearby areas within 10 miles. Driveways, patios, decking, walls, paths and more. Fast, insured and affordable. Call 07735 873694.">
