--- a/services/upvc-restoration.html
+++ b/services/upvc-restoration.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>uPVC Restoration & Cleaning in Askern DN6 | Windows, Doors, Gutters & Conservatories</title>
+<link rel="icon" href="/favicon.png" type="image/png">
 
 <link rel="canonical" href="https://homerepairs4u.com/services/upvc-restoration.html">
 <meta name="description" content="Professional uPVC restoration in Askern DN6. Gutter and fascia cleaning, downpipe maintenance, uPVC window and door cleaning, conservatory roof cleaning, full internal and external valets. Call 07735 873694.">
