--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@ loading="lazy">
 <a href="/services/guttering.html" style="color:white; margin:0 8px;">Guttering</a>
 <a href="/services/pressure-washing.html" style="color:white; margin:0 8px;">Pressure Washing</a>
 <a href="/services/upvc-restoration.html" style="color:white; margin:0 8px;">uPVC Restoration</a>
+<p>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
 </p>
 </footer>
 
