--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -300,6 +300,9 @@ Whether you’re in Askern or anywhere within 10 miles, simply call us and we’
 <a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
 <a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
 <a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
+<p>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
+</p>
 
 </footer>
 
