--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -389,6 +389,9 @@ Call us today to arrange a visit and discuss your project.
 <a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
 <a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
 </footer>
+<p>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
+</p>
 
 </body>
 </html>
