--- a/services/garden.html
+++ b/services/garden.html
@@ -372,6 +372,9 @@ Call <strong>Home Repairs 4U</strong> today to arrange a free consultation and l
 <a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
 <a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
 </footer>
+<p>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
+</p>
 
 </body>
 </html>
