--- a/services/guttering.html
+++ b/services/guttering.html
@@ -252,6 +252,9 @@ For fast, friendly and professional gutter cleaning, clearing or replacement, co
 <a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
 <a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
 </footer>
+<p>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
+</p>
 
 </body>
 </html>
