--- a/services/instant-fence-quote.html
+++ b/services/instant-fence-quote.html
@@ -212,6 +212,10 @@ if(!expanded) answer.focus();
 btn.addEventListener('keydown', (e)=>{if(e.key==="Enter"||e.key===" "){ e.preventDefault(); btn.click(); }});
 });
 </script>
+<p>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
+</p>
+
 
 </body>
 </html>
