--- a/services/upvc-restoration.html
+++ b/services/upvc-restoration.html
@@ -291,6 +291,9 @@ Call today to arrange a free consultation or schedule a visit to restore your pr
 <a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
 <a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
 </footer>
+<p>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
+</p>
 
 </body>
 </html>
