--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -287,7 +287,18 @@ document.getElementById('quoteResult').innerHTML = resultHTML;
 Outdoor surfaces face constant exposure to the elements. Rain, algae, moss, car oil, tyre marks, mud, UV fading and pollution all contribute to the gradual decline of driveways, patios, decking and pathways. Many homeowners are surprised by how quickly surfaces lose their original colour and how easily they can become slippery, unsafe and unattractive.
 Fortunately, most of this can be reversed with the right pressure washing equipment and experienced hands.
 </p>
+<a href="#pressure-lightbox">
+<img src="/images/pressure-wash-1.webp"
+alt="Exterior pressure washing service cobbles stone Askern Doncaster"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
 
+<div id="pressure-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/pressue-wash-1.webp" alt="Exterior pressure washing service cobbles stone Askern Doncaster expanded">
+</a>
+</div>
 <h2>Our Professional Pressure Washing Services</h2>
 
 <h3>✔ Driveway Pressure Washing</h3>
