--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -296,7 +296,7 @@ loading="lazy">
 
 <div id="pressure-lightbox" class="lightbox">
 <a href="#">
-<img src="/images/pressue-wash-1.webp" alt="Exterior pressure washing service cobbles stone Askern Doncaster expanded">
+<img src="/images/pressue-wash-1.webp" alt="Exterior pressure washing service cobbles stone Askern Doncaster example enlarged">
 </a>
 </div>
 <h2>Our Professional Pressure Washing Services</h2>
