--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -295,7 +295,20 @@ Fortunately, most of this can be reversed with the right pressure washing equipm
 Block paving, concrete, resin-bound and tarmac driveways collect years of dirt, moss, tyre marks, algae and oil. Our professional cleaning process lifts deep-set grime and organic growth, restoring both appearance and safety. We carefully adjust pressure settings depending on the surface material to prevent damage.
 Driveway cleaning is one of the most transformative exterior services — often giving a property an instant visual lift.
 </p>
+<a href="#pressure-lightbox">
+<img src="/images/pressure-wash-1.webp"
+alt="Exterior pressure washing service cobbles stone Askern Doncaster"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
 
+<div id="pressure-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/pressue-wash-1.webp" alt="Exterior pressure washing service cobbles stone Askern Doncaster example enlarged">
+</a>
+</div>
+<h3>✔ Pathway, Steps & Access Area Cleaning</h3>
+<p>
 <h3>✔ Patio & Paving Cleaning</h3>
 <p>
 Patios often accumulate moss, weeds, lichen and black spot due to moisture and limited sunlight. We use specialist pressure washing techniques to remove stubborn debris without damaging pointing or the stone surface.
