--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -296,15 +296,15 @@ Block paving, concrete, resin-bound and tarmac driveways collect years of dirt, 
 Driveway cleaning is one of the most transformative exterior services — often giving a property an instant visual lift.
 </p>
 <a href="#pressure-lightbox">
-<img src="/images/pressure-wash-1.webp"
-alt="Exterior pressure washing service cobbles stone Askern Doncaster"
+<img src="/images/pressure-wash-driveway.webp"
+alt="Exterior pressure washing service driveway Askern Doncaster"
 style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
 loading="lazy">
 </a>
 
 <div id="pressure-lightbox" class="lightbox">
 <a href="#">
-<img src="/images/pressue-wash-1.webp" alt="Exterior pressure washing service cobbles stone Askern Doncaster example enlarged">
+<img src="/images/pressue-wash-driveway.webp" alt="Exterior pressure washing service driveway Askern Doncaster example enlarged">
 </a>
 </div>
 <h3>✔ Pathway, Steps & Access Area Cleaning</h3>
