--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -295,8 +295,8 @@ Fortunately, most of this can be reversed with the right pressure washing equipm
 Block paving, concrete, resin-bound and tarmac driveways collect years of dirt, moss, tyre marks, algae and oil. Our professional cleaning process lifts deep-set grime and organic growth, restoring both appearance and safety. We carefully adjust pressure settings depending on the surface material to prevent damage.
 Driveway cleaning is one of the most transformative exterior services — often giving a property an instant visual lift.
 </p>
-<a href="#pressure-lightbox">
-<img src="/images/pressure-wash-driveway.webp"
+<a href="#driveway-lightbox">
+<img src="/images/driveway-pressure-wash.webp"
 alt="Exterior pressure washing service driveway Askern Doncaster"
 style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
 loading="lazy">
@@ -304,7 +304,7 @@ loading="lazy">
 
 <div id="pressure-lightbox" class="lightbox">
 <a href="#">
-<img src="/images/pressue-wash-driveway.webp" alt="Exterior pressure washing service driveway Askern Doncaster example enlarged">
+<img src="/images/driveway-pressure-wash.webp" alt="Exterior pressure washing service driveway Askern Doncaster example enlarged">
 </a>
 </div>
 <h3>✔ Pathway, Steps & Access Area Cleaning</h3>
