--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -302,7 +302,7 @@ style="width:100%; max-width:900px; display:block; margin:20px auto; border-radi
 loading="lazy">
 </a>
 
-<div id="pressure-lightbox" class="lightbox">
+<div id="driveway-lightbox" class="lightbox">
 <a href="#">
 <img src="/images/driveway-pressure-wash.webp" alt="Exterior pressure washing service driveway Askern Doncaster example enlarged">
 </a>
