--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -314,7 +314,18 @@ loading="lazy">
 Patios often accumulate moss, weeds, lichen and black spot due to moisture and limited sunlight. We use specialist pressure washing techniques to remove stubborn debris without damaging pointing or the stone surface.
 Whether your patio is sandstone, limestone, concrete, porcelain or block paving, we restore its natural colour and remove slippery buildup.
 </p>
+<a href="#patio-lightbox">
+<img src="/images/house-before-after.webp"
+alt="Exterior decorating before and after example"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
 
+<div id="patio-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/house-before-after.webp" alt="Exterior decorating before and after example enlarged">
+</a>
+</div>
 <h3>✔ Decking Cleaning</h3>
 <p>
 Wooden decking requires skilled handling during cleaning. Too much pressure can cause splintering; too little won’t remove ingrained algae. Our approach gently yet effectively lifts dirt, mould and organic growth, leaving your decking clean and ready for sealing or painting if needed.
