--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -315,15 +315,15 @@ Patios often accumulate moss, weeds, lichen and black spot due to moisture and l
 Whether your patio is sandstone, limestone, concrete, porcelain or block paving, we restore its natural colour and remove slippery buildup.
 </p>
 <a href="#patio-lightbox">
-<img src="/images/house-before-after.webp"
-alt="Exterior decorating before and after example"
+<img src="/images/patio-jet-wash.webp"
+alt="Exterior patio pressure wash for your home Askern, Campsall, Doncaster"
 style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
 loading="lazy">
 </a>
 
 <div id="patio-lightbox" class="lightbox">
 <a href="#">
-<img src="/images/house-before-after.webp" alt="Exterior decorating before and after example enlarged">
+<img src="/images/patio-jet-wash.webp" alt="Exterior patio pressure wash for your home Askern, Campsall, Doncaster example enlarged">
 </a>
 </div>
 <h3>✔ Decking Cleaning</h3>
