--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -378,7 +378,7 @@ If you're unsure whether we cover your location, the answer is almost always yes
 <li>✔ Safe cleaning methods tailored to each surface type</li>
 </ul>
 
-<h2>Long-Form Service Overview (SEO-Optimised)</h2>
+<h2>Overview</h2>
 
 <p>
 Pressure washing is one of the most effective ways to restore the external surfaces of your property. Over time, driveways, patios and pathways accumulate a mixture of organic growth and environmental pollutants. These build up gradually, often going unnoticed until the surface becomes slippery, unsightly or patched with discolouration.
