--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -328,6 +328,18 @@ loading="lazy">
 </div>
 <h3>✔ Decking Cleaning</h3>
 <p>
+ <a href="#deck-lightbox">
+<img src="/images/deck.webp"
+alt="Decking jet-wash Doncaster Askern Norton"
+style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
+loading="lazy">
+</a>
+
+<div id="deck-lightbox" class="lightbox">
+<a href="#">
+<img src="/images/deck.webp" alt="Decking jet-wash Doncaster Askern Norton example enlarged">
+</a>
+</div>
 Wooden decking requires skilled handling during cleaning. Too much pressure can cause splintering; too little won’t remove ingrained algae. Our approach gently yet effectively lifts dirt, mould and organic growth, leaving your decking clean and ready for sealing or painting if needed.
 A clean deck not only looks better but is far safer underfoot.
 </p>
